--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,8 +10,9 @@
     "axios": "^1.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^6.23.1"
   },
+  "proxy": "http://localhost:8080",
   "devDependencies": {
     "buffer": "^6.0.3",
     "parcel": "^2.12.0",
