--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.24.1"
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
